# Scenehound

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.example.yml  docker-entrypoint.sh  pyproject.toml
.forgejo/workflows/: ci.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/plans/: 2026-07-11-scenehound-design.md  2026-07-11-scenehound-implementation.md
docs/superpowers/plans/: 2026-07-12-import-completer.md  2026-07-12-web-ui.md  2026-07-13-date-skew-forgiveness.md  2026-07-14-grabbed-candidate-ui.md  2026-07-15-foreign-title-veto-generalization.md  2026-07-15-secondary-date-foreign-title.md  (+1 more)
icons/: README.md
scenehound/: api.py  app.py  config.py  dates.py  import_api.py  import_completer.py  matcher.py  models.py  normalize.py  observe.py  query_planner.py  rate_limiter.py  rewriter.py  torznab.py  ui_api.py  wanted_index.py
scenehound/clients/: prowlarr.py  whisparr.py
scenehound/static/: ui.html
scripts/: probe_whisparr.sh
tests/: conftest.py  test_api.py  test_app.py  test_config.py  test_corpus.py  test_dates.py  test_import_api.py  test_import_completer.py  test_import_corpus.py  test_import_wiring.py  test_matcher.py  test_normalize.py  test_observe.py  test_prowlarr_client.py  test_query_planner.py  test_rate_limiter.py  test_rewriter.py  test_torznab.py  test_ui_api.py  test_wanted_index.py  test_whisparr_client.py
tests/fixtures/: corpus.yaml  import_pack_corpus.yaml  whisparr_manualimport_sample.json  whisparr_queue_sample.json  whisparr_wanted_sample.json
unraid/: scenehound.xml
(+7 files in other folders)
